# ghost-link

./: .gitignore  README.md  latest.json  package-lock.json  package.json  tsconfig.json
docs/: CHECKLIST-test-v0.35.md  maintenance.md  plan-chat-vocal.md  plan-groupes.md
docs/superpowers/plans/: 2026-07-16-lot-v0.34.md
docs/superpowers/specs/: 2026-07-15-lot-social-v033-design.md  2026-07-16-medias-presence-qualite-roster-design.md
scripts/: build-signed.ps1  make-latest-json.mjs  release.ps1  setup-github.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  main.rs  meta.rs  net.rs  sysaudio.rs  video.rs
ui/: index.html
ui/js/: call.js  dom.js  friends.js  groups.js  main.js  session.js  state.js  tauri.js  transfer.js
ui/src/: call.ts  dom.ts  friends.ts  groups.ts  main.ts  session.ts  state.ts  tauri.ts  transfer.ts
