# Dépendances de référence pour le M0.
# Si tu génères le projet avec `cargo create-tauri-app`, fusionne ces dépendances
# dans le Cargo.toml généré (garde le [package] et le [lib]/[[bin]] générés).

[package]
name = "ghost-link"
version = "0.28.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
# iroh évolue vite — 0.98 est la dernière stable au moment d'écrire ce squelette
# (l'API suit l'exemple officiel echo.rs). Au besoin : `cargo add iroh`.
iroh = "0.98"
dirs = "6"
sha2 = "0.10"
fs2 = "0.4"
tauri-plugin-updater = "2"
cpal = "0.15"
audiopus = "0.2"
bytes = "1"
# Nettoyage des métadonnées avant envoi (meta.rs) : PDF (Info/XMP) et documents
# ZIP (docx/xlsx/pptx/odt — docProps, meta.xml). lopdf ≤ 0.34 : les versions
# récentes exigent sha2 0.11, en conflit avec le sha2 0.11.0-rc.5 épinglé par iroh.
lopdf = "0.34"
# deflate-flate2-zlib-rs et non la méta-feature "deflate" : celle-ci embarque aussi
# zopfli (+bumpalo), inutile pour écrire quelques petites entrées XML de remplacement.
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

# Chiffrement de la clé d'identité au repos (DPAPI) — Windows uniquement.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }
