# Dépendances de référence pour le M0.
# Si tu génères le projet avec `cargo create-tauri-app`, fusionne ces dépendances
# dans le Cargo.toml généré (garde le [package] et le [lib]/[[bin]] générés).

[package]
name = "ghost-link"
version = "0.35.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
# iroh évolue vite — 0.98 est la dernière stable au moment d'écrire ce squelette
# (l'API suit l'exemple officiel echo.rs). Au besoin : `cargo add iroh`.
iroh = "0.98"
dirs = "6"
sha2 = "0.10"
fs2 = "0.4"
tauri-plugin-updater = "2"
cpal = "0.15"
audiopus = "0.2"
bytes = "1"
# Nettoyage des métadonnées avant envoi (meta.rs) : PDF (Info/XMP) et documents
# ZIP (docx/xlsx/pptx/odt — docProps, meta.xml). lopdf ≤ 0.34 : les versions
# récentes exigent sha2 0.11, en conflit avec le sha2 0.11.0-rc.5 épinglé par iroh.
lopdf = "0.34"
# deflate-flate2-zlib-rs et non la méta-feature "deflate" : celle-ci embarque aussi
# zopfli (+bumpalo), inutile pour écrire quelques petites entrées XML de remplacement.
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
base64 = "0.22.1"

# Chiffrement de la clé d'identité au repos (DPAPI) — Windows uniquement.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }
# Capture « process loopback » du son système en EXCLUANT notre propre processus
# (anti-écho parfait pour le partage d'écran) — WASAPI, Windows 10 2004+.
windows-core = "0.58"
# Les features Graphics/DirectX/MediaFoundation servent au partage d'écran NATIF
# (video.rs : capture WGC → NVENC → flux QUIC, sans WebRTC ni STUN).
windows = { version = "0.58", features = [
    "implement",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_MediaFoundation",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
] }

# La conversion BGRA→NV12 (video.rs) est une boucle par pixel : à opt-level 0 elle
# plafonnerait à quelques fps en `cargo tauri dev`. opt-level 1 suffit pour tenir
# 30 fps en dev sans sacrifier les temps de compilation ni le débogage.
[profile.dev]
opt-level = 1
